FIx whitespace

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,8 @@ html {
   flex-direction: column;
   min-height: 100vh;
   background: white;
+  word-break: break-word;
+  word-wrap: break-word;
 }
 
 * {
